--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,13 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@hookform/resolvers": "^5.0.1",
+    "@reduxjs/toolkit": "^2.7.0",
+    "date-fns": "^4.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
