--- a/backend/TalanCup.WebApi/TalanCup.WebApi.csproj
+++ b/backend/TalanCup.WebApi/TalanCup.WebApi.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <PropertyGroup>
+    <UserSecretsId>65b7c108-9a7a-47eb-a708-3b72c5c9306d</UserSecretsId>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="NSwag.AspNetCore" />
     <PackageReference Include="NSwag.MSBuild">
@@ -13,6 +17,7 @@
     <ProjectReference Include="..\TalanCup.Contracts\TalanCup.Contracts.csproj" />
     <ProjectReference Include="..\TalanCup.Domain\TalanCup.Domain.csproj" />
     <ProjectReference Include="..\TalanCup.Infrastructure\TalanCup.Infrastructure.csproj" />
+    <ProjectReference Include="..\TalanCup.Shared\TalanCup.Shared.csproj" />
   </ItemGroup>
 
   <Target Name="NSwag" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' And '$(SkipNSwag)' != 'True' ">
