--- a/backend/TalanCup.WebApi/appsettings.Development.json
+++ b/backend/TalanCup.WebApi/appsettings.Development.json
@@ -7,7 +7,11 @@
   },
   "TalanCup": {
     "Cors": {
-      "AllowedOrigins":  ["http://localhost:5173"]
+      "AllowedOrigins": [ "http://localhost:5173" ]
+    },
+    "JWT": {
+      "Issuer": "https://localhost",
+      "Audience": "dev"
     }
   }
 }
