--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "chakra-snippet": "pnpm exec chakra snippet add --outdir ./src/components/chakra"
   },
   "dependencies": {
     "@chakra-ui/react": "^3.16.1",
@@ -29,6 +30,7 @@
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@chakra-ui/cli": "^3.17.0",
     "@eslint/js": "^9.22.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
