fix: manually trigger gha

--- a/.github/workflows/buildAndDeployFront.yaml
+++ b/.github/workflows/buildAndDeployFront.yaml
@@ -1,6 +1,7 @@
 name: Deploy React App to GitHub Pages
 
 on:
+  workflow_dispatch: # Allows manual triggering of the workflow
   push:
     branches:
       - main
