wip: debug backend for prod

--- a/backend/TalanCup.WebApi/appsettings.json
+++ b/backend/TalanCup.WebApi/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "TalanCup": {
+    "Cors": {
+      "AllowedOrigins": [ "http://localhost:5173" ]
+    },
+    "JWT": {
+      "Issuer": "https://localhost",
+      "Audience": "dev",
+      "Secret": "SuperSecretKey123456789WithThatItWillBeLongEnough"
+    }
+  }
 }
