--- a/.github/workflows/buildAndDeployBack.yaml
+++ b/.github/workflows/buildAndDeployBack.yaml
@@ -31,7 +31,7 @@ jobs:
 
       - name: dotnet publish
         working-directory: ./backend
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./TalanCup.WebApi/TalanCup.WebApi.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
