--- a/backend/TalanCup.WebApi/appsettings.json
+++ b/backend/TalanCup.WebApi/appsettings.json
@@ -13,7 +13,7 @@
     "JWT": {
       "Issuer": "https://localhost",
       "Audience": "dev",
-      "Secret": "SuperSecretKey123456789WithThatItWillBeLongEnough"
+      "SecretKey": "SuperSecretKey123456789WithThatItWillBeLongEnough"
     }
   }
 }
