--- a/backend/TalanCup.WebApi/appsettings.json
+++ b/backend/TalanCup.WebApi/appsettings.json
@@ -5,15 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "TalanCup": {
-    "Cors": {
-      "AllowedOrigins": [ "http://localhost:5173" ]
-    },
-    "JWT": {
-      "Issuer": "https://localhost",
-      "Audience": "dev",
-      "SecretKey": "SuperSecretKey123456789WithThatItWillBeLongEnough"
-    }
-  }
+  "AllowedHosts": "*"
 }
