--- a/backend/TalanCup.Infrastructure/TalanCup.Infrastructure.csproj
+++ b/backend/TalanCup.Infrastructure/TalanCup.Infrastructure.csproj
@@ -7,8 +7,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Authorization" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
   </ItemGroup>
 
