--- a/backend/TalanCup.WebApi/appsettings.Development.json
+++ b/backend/TalanCup.WebApi/appsettings.Development.json
@@ -12,6 +12,9 @@
     "JWT": {
       "Issuer": "https://localhost",
       "Audience": "dev"
+    },
+    "Database": {
+      "InitData":  false
     }
   }
 }
