--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_APP_TITLE=Talan CUP 6 (PROD)
-VITE_API_URL=https://talan-cup-api-bth4fbhbbya7ffa2.francecentral-01.azurewebsites.net
+VITE_APP_TITLE=Talan Summer #1
+VITE_API_URL=https://talan-cup-g6c9hfdwehasg4as.francecentral-01.azurewebsites.net
