--- a/.github/workflows/buildAndDeployBack.yaml
+++ b/.github/workflows/buildAndDeployBack.yaml
@@ -58,7 +58,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
-          app-name: "talan-cup-api"
+          app-name: "talan-cup"
           slot-name: "Production"
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: "./"
+          package: .
