--- a/backend/TalanCup.WebApi/appsettings.NSwag.json
+++ b/backend/TalanCup.WebApi/appsettings.NSwag.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   },
   "TalanCup": {
@@ -12,7 +15,7 @@
     "JWT": {
       "Issuer": "https://localhost",
       "Audience": "dev",
-      "SecretKey":  "_"
+      "SecretKey": "_"
     }
   }
 }
