--- a/backend/TalanCup.WebApi/appsettings.Development.json
+++ b/backend/TalanCup.WebApi/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
     }
   },
   "TalanCup": {
@@ -14,7 +17,7 @@
       "Audience": "dev"
     },
     "Database": {
-      "InitData":  false
+      "InitData": false
     }
   }
 }
