--- a/backend/TalanCup.Domain/TalanCup.Domain.csproj
+++ b/backend/TalanCup.Domain/TalanCup.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TalanCup.Shared\TalanCup.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
